terraform/main.tf
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    main.tf                                            :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: ertrigna <ertrigna@student.42.fr>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2026/06/08 11:39:59 by ertrigna          #+#    #+#              #
#    Updated: 2026/06/08 11:53:16 by ertrigna         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

resource "aws_instance" "web" {
	ami				= "ami-0c6ebbd55ab05f070" # Ubuntu 22.04 (Paris)
	instance_type	= "t2.micro"

	key_name 		= cloud_1_key.pem

	vpc_security_groups_ids	= [aws_security_group.web_sg.id]
	
	tags = {
		Name = "web-vm"
	}
}

resource "aws_instance" "db" {
	ami				= "ami-0c6ebbd55ab05f070"
	instance_type	= "t2.micro"
	
	key_name		= cloud_1_key.pem

	vpc_security_groups_ids = [aws_security_group.db_sg.id]

	tags = {
		Name = "db-vm"
	}
}
